--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -11,8 +11,10 @@ $ColorFuenteHeader:#632e79d0;
 /*paleta de colores carouseles*/
 $PaletaColoreCarousel:(Encabezado:#502f5ef5,
     Texto:rgb(43, 2, 82),
-    EncabezadoAlt:#a392aaf5,
-    TextoSup:rgb(239, 236, 241),
+    EncabezadoAlt:#866294f5,
+    Textocont:black,
+    TextoSup:rgb(101, 89, 110),
     TextoAlt:rgb(130, 65, 184),
     Especialidades:#2f0341,
+    Boton:rgb(243, 240, 247),
 );
