--- a/scss/base/_tipografías.scss
+++ b/scss/base/_tipografías.scss
@@ -8,6 +8,6 @@ $Fontsizes:(XXL:$TamanioFuenteMayor,
     S:$TamanioFuenteMayor - 1.5,
     XS:$TamanioFuenteMayor - 1.75,
     STD:$TamanioFuenteMayor - 2,
-    XXS:$TamanioFuenteMayor -2.25,
+    XXS:$TamanioFuenteMayor - 2.25,
     US:$TamanioFuenteMayor - 2.5,
 );
