--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
   border: none;
   margin: 0%;
   padding: 0%;
-  font-family: 'Ubuntu', sans-serif; }
+  font-family: 'Cabin Condensed', sans-serif; }
 
 /*propiedades de body*/
 .body {
