--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -2,9 +2,9 @@
     list-style-type: none;
     text-decoration: none;
     box-sizing: border-box;
-    overflow: auto;
+    overflow-x: hidden;
     border: none;
     margin: 0%;
     padding: 0%;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Cabin Condensed', sans-serif;
 }
