--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,6 +5,10 @@
         color: map-get($PaletaColoreCarousel, Texto);
         padding-left: 25px;
         padding-top: 5px;
+        box-shadow: -1px -5px 7px 1px rgba(146, 137, 194, 0.75);
+        -webkit-box-shadow: -1px -5px 7px 1px rgba(146, 137, 194, 0.75);
+        -moz-box-shadow: -1px -5px 7px 1px rgba(146, 137, 194, 0.75);
+
 
         .footer__mapa {
             max-width: 50%;
