--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -4,6 +4,7 @@
 @import "./base/reset";
 @import "./base/tipografías";
 @import "./layout/bbody";
+@import "./layout/error404";
 @import "./layout/header";
 @import "./layout/footer";
 @import "./componentes/carousel";
